--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -44,7 +44,7 @@
 // -----------------------------------------
 
 .hero {
-    background-image: url("/assets/images/polignano.jpg");
+    background-image: url("../images/polignano.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
