--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,8 @@ html, body {
 ul,
 ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 img,
@@ -146,8 +148,25 @@ nav .nav-link.active {
   grid-template-columns: inherit;
 }
 
+main img {
+  border-radius: 0.5rem;
+}
+
+footer {
+  padding: 1rem 0;
+}
+footer div {
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border-top: 1px solid #4A4A4A;
+}
+
 .hero {
   background-image: url("../images/polignano.webp");
+  background-color: rgba(74, 74, 74, 0.5);
+  background-blend-mode: multiply;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -163,17 +182,24 @@ nav .nav-link.active {
   text-transform: uppercase;
 }
 
-main img {
-  border-radius: 0.5rem;
+.info-list {
+  display: grid;
+  gap: 0.5rem;
 }
-
-footer {
-  padding: 1rem 0;
+@media (min-width: 576px) {
+  .info-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
-footer div {
-  padding: 1rem 0;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  border-top: 1px solid #4A4A4A;
+.info-list li {
+  position: relative;
+  padding-left: 1.5em;
+}
+.info-list li::before {
+  content: "\f00c";
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+  color: #2ECC71;
+  position: absolute;
+  left: 0;
 }
