--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -41,27 +41,7 @@
     grid-template-columns: inherit;
 }
 
-// -----------------------------------------
-
-.hero {
-    background-image: url("../images/polignano.webp");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    min-height: 300px;
-
-    align-content: center;
-    text-align: center;
-    
-    h1, h2 {
-        color: $secondary-color;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    }
-
-    h1 {
-        text-transform: uppercase;
-    }
-}
+// generic css
 
 main {
     img {
@@ -80,5 +60,50 @@ footer {
         border-top: 1px solid $primary-color;
     }
 }
+
+// specific css
   
-  
+.hero {
+    background-image: url("../images/polignano.webp");
+    background-color: rgba($primary-color, 0.5);
+    background-blend-mode: multiply;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 300px;
+
+    align-content: center;
+    text-align: center;
+    
+    h1, h2 {
+        color: $secondary-color;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    h1 {
+        text-transform: uppercase;
+    }
+}
+
+.info-list {
+    display: grid;
+    gap: 0.5rem;
+
+    @media (min-width: 576px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    li {
+        position: relative;
+        padding-left: 1.5em;
+
+        &::before {
+            content: '\f00c';
+            font-family: 'Font Awesome 6 Free';
+            font-weight: 900;
+            color: $tertiary-color;
+            position: absolute;
+            left: 0;
+        }
+    }
+}
