--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -7,6 +7,7 @@
 // }
 
 // alternative to container
+
 .content-grid {
     --padding-inline: 1rem;
     --content-max-width: 95ch;
@@ -22,7 +23,7 @@
         minmax(0, var(--breakout-size)) [breakout-end]
         minmax(var(--padding-inline), 1fr) [full-width-end];
 
-    row-gap: 1.5rem;
+    row-gap: 1rem;
 }
 
 .content-grid > :not(.breakout, .full-width),
@@ -63,27 +64,27 @@ footer {
 
 // specific css
   
-.hero {
-    background-image: url("../images/polignano.webp");
-    background-color: rgba($primary-color, 0.5);
-    background-blend-mode: multiply;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    min-height: 300px;
+// .hero {
+//     background-image: url("../images/polignano.webp");
+//     background-color: rgba($primary-color, 0.5);
+//     background-blend-mode: multiply;
+//     background-size: cover;
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     min-height: 300px;
 
-    align-content: center;
-    text-align: center;
+//     align-content: center;
+//     text-align: center;
     
-    h1, h2 {
-        color: $secondary-color;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    }
+//     h1, h2 {
+//         color: $secondary-color;
+//         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+//     }
 
-    h1 {
-        text-transform: uppercase;
-    }
-}
+//     h1 {
+//         text-transform: uppercase;
+//     }
+// }
 
 .info-list {
     display: grid;
