--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
 *,
 *::before,
@@ -70,22 +71,21 @@ body {
   background-color: #FAF9F6;
 }
 
-h1, h2, h3, h4 {
-  line-height: 1.3;
-  font-weight: 700;
-}
-
 h1 {
   font-size: clamp(2rem, 1.5rem + 1.5vw, 3.5rem);
+  font-weight: 700;
 }
 
 h2 {
   font-size: clamp(1.75rem, 1.25rem + 1.5vw, 3rem);
+  font-weight: 700;
+  margin: 1.3rem 0;
 }
 
 h3 {
   font-size: clamp(1.5rem, 1.125rem + 1.2vw, 2rem);
   font-weight: 600;
+  margin: 1.1rem 0;
 }
 
 h4 {
@@ -93,9 +93,15 @@ h4 {
   font-weight: 600;
 }
 
-p, a, li, span {
-  font-size: clamp(1rem, 0.75rem + 1vw, 1.5rem);
-  line-height: 1.6;
+p {
+  font-size: clamp(0.9rem, 0.7rem + 1vw, 1.3rem);
+  font-weight: 400;
+  margin: 0.8rem 0;
+  transition: all 0.3s ease;
+}
+
+a, li, span {
+  font-size: clamp(0.9rem, 0.7rem + 1vw, 1.3rem);
   font-weight: 400;
   transition: all 0.3s ease;
 }
@@ -108,6 +114,10 @@ a:hover, a:focus {
 }
 a:active {
   color: #e1c23f;
+}
+
+img {
+  margin: 2rem 0;
 }
 
 nav {
@@ -124,29 +134,14 @@ nav .nav-link.active {
   color: #7d7d7d;
 }
 
-.content-grid {
-  --padding-inline: 1rem;
-  --content-max-width: 95ch;
-  --breakout-max-width: 115ch;
-  --breakout-size: calc((var(--breakout-max-width) - var(--content-max-width)) / 2);
-  display: grid;
-  grid-template-columns: [full-width-start] minmax(var(--padding-inline), 1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(100% - var(--padding-inline) * 2, var(--content-max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
-  row-gap: 1rem;
+.full-width {
+  width: 100%;
 }
 
-.content-grid > :not(.breakout, .full-width),
-.full-width > :not(.breakout, .full-width) {
-  grid-column: content;
-}
-
-.content-grid > .breakout {
-  grid-column: breakout;
-}
-
-.content-grid > .full-width {
-  grid-column: full-width;
-  display: grid;
-  grid-template-columns: inherit;
+.inner-content {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 main img {
@@ -162,28 +157,6 @@ footer div {
   flex-direction: column;
   text-align: center;
   border-top: 1px solid #4A4A4A;
-}
-
-.info-list {
-  display: grid;
-  gap: 0.5rem;
-}
-@media (min-width: 576px) {
-  .info-list {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-.info-list li {
-  position: relative;
-  padding-left: 1.5em;
-}
-.info-list li::before {
-  content: "\f00c";
-  font-family: "Font Awesome 6 Free";
-  font-weight: 900;
-  color: #EFDE97;
-  position: absolute;
-  left: 0;
 }
 
 #contact-form {
@@ -246,4 +219,33 @@ footer div {
 }
 #contact-form .form-action button:active {
   background-color: #e1c23f;
+}
+
+.icon-row {
+  display: flex;
+  justify-content: space-around; /* Spaziatura uniforme tra le icone */
+  align-items: center;
+  width: 100%;
+  padding: 20px 0;
+  position: relative;
+}
+
+.icon-row::before {
+  content: "";
+  position: absolute;
+  bottom: 50%; /* Posiziona la linea a metà altezza */
+  left: 0;
+  right: 0;
+  height: 1px;
+  background-color: #333; /* Colore della linea */
+  z-index: 0;
+}
+
+.icon {
+  font-size: 1.2rem;
+  color: #EFDE97;
+  background-color: #FAF9F6;
+  position: relative;
+  z-index: 1; /* Porta le icone sopra la linea */
+  padding: 0 15px; /* Aggiunge spazio attorno alle icone */
 }
