--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,10 +116,6 @@ a:active {
   color: #e1c23f;
 }
 
-img {
-  margin: 2rem 0;
-}
-
 nav {
   background-color: #FAF9F6;
   margin-bottom: 2rem;
@@ -144,8 +140,19 @@ nav .nav-link.active {
   padding: 0 15px;
 }
 
+header img {
+  margin: 2rem 0;
+}
+
 main img {
   border-radius: 0.5rem;
+  width: 100%;
+  height: 450px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  margin: 2rem 0;
 }
 
 footer {
