--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -16,9 +16,20 @@
 
 // generic css
 
+header {
+    img {
+        margin: 2rem 0;
+    }
+}
+
 main {
     img {
         border-radius: 0.5rem;
+        width: 100%;
+        height: 450px;
+        object-fit: cover;
+        object-position: center;
+        margin: 2rem 0;
     }
 }
 
