--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,23 +74,25 @@ body {
 h1 {
   font-size: clamp(2rem, 1.5rem + 1.5vw, 3.5rem);
   font-weight: 700;
+  margin: 1.5rem 0;
 }
 
 h2 {
   font-size: clamp(1.75rem, 1.25rem + 1.5vw, 3rem);
   font-weight: 700;
-  margin: 1.3rem 0;
+  margin: 1.2rem 0;
 }
 
 h3 {
   font-size: clamp(1.5rem, 1.125rem + 1.2vw, 2rem);
   font-weight: 600;
-  margin: 1.1rem 0;
+  margin: 1rem 0;
 }
 
 h4 {
-  font-size: clamp(1.25rem, 1rem + 1vw, 1.75rem);
+  font-size: clamp(0.9rem, 0.7rem + 1vw, 1.3rem);
   font-weight: 600;
+  margin: 1rem 0;
 }
 
 p {
@@ -255,4 +257,22 @@ footer div {
   position: relative;
   z-index: 1; /* Porta le icone sopra la linea */
   padding: 0 15px; /* Aggiunge spazio attorno alle icone */
+}
+
+.review-rating {
+  display: flex;
+  align-items: center;
+}
+.review-rating > :first-child {
+  padding-right: 1rem;
+}
+
+@media (min-width: 992px) {
+  .review-info {
+    display: flex;
+    align-items: center;
+  }
+}
+.review-info > :first-child {
+  padding-right: 1rem;
 }
