--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -40,23 +40,25 @@ body {
 h1 {
     font-size: $font-size-h1;
     font-weight: $font-bold;
+    margin: 1.5rem 0;
 }
 
 h2 {
     font-size: $font-size-h2;
     font-weight: $font-bold;
-    margin: 1.3rem 0;
+    margin: 1.2rem 0;
 }
 
 h3 {
     font-size: $font-size-h3;
     font-weight: $font-semi-bold; // Specific weight for h3
-    margin: 1.1rem 0;
+    margin: 1rem 0;
 }
 
 h4 {
-    font-size: $font-size-h4;
+    font-size: $font-size-text;
     font-weight: $font-semi-bold; // Specific weight for h4
+    margin: 1rem 0;
 }
 
 p{
